[package]
name = "markup"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = ""
keywords = ["markup"]
homepage = "https://github.com/endoli/markup.rs"
repository = "https://github.com/endoli/markup.rs"
documentation = "https://endoli.github.io/markup.rs/"

[dependencies]
